--- a/website/multiplication.html
+++ b/website/multiplication.html
@@ -40,6 +40,8 @@
             width: 49%;
             color: #d7ba7d;
             margin-top: 5px;
+            height: 4em;
+            vertical-align: top;
         }
 
         header {
@@ -146,7 +148,7 @@
         #nav {
             margin-bottom: 50px;
             background-color: black;
-            padding: 10px 0px 10px 0px;
+            padding: 10px 0px 40px 0px;
             min-width: 100%;
             position: fixed;
             left: 0px;
@@ -186,24 +188,25 @@
             <p>Agile Multiplication Trainer</p>
         </header>
         <div id="Solution" style="display: none;" onclick="toggleSolution()">
-            <h2>Partial Solutions</h2>
+            <h2>Solutions</h2>
             <h3 id="Solution-task"></h3>
             <p id="partial-solutions"></p>
         </div>
         <div id="nav" class="hidden">
+            <h2 onclick="toggleNav()">(O)ptions</h2>
             <div id="control">
                 <button id="newTask" title="Create a new task based on the config and reset the view."
                     onclick="newTask()">(N)ew</button>
                 <button id="submit" title="Submit and validate the current result." onclick="saveTempSolution()">(<span
                         style="font-size: x-small;">⏎</span>) Validate</button>
-                <button id="hideNavigation" title="Hide the header, navigation and config area."
-                    onclick="toggleNav()">(O)ptions</button>
                 <button id="toggleFullScreen" title="Switch to full screen mode and back."
                     onclick="toggleFullScreen()">(F)ullscreen</button>
                 <button id="toggleSolution" title="Show the solution and steps as a hint."
                     onclick="toggleSolution()">(S)olution</button>
                 <button id="voiceMode" title="Use voice recognition instead of keyboard input."
-                    onclick="toggleVoiceMode()">(V)oice is OFF</button>
+                    onclick="toggleVoiceMode()"></button>
+                <button id="impress" title="Print legal information and credits."
+                    onclick="">(L)egal Notice<br/><span style='font-size: x-small'>(Impressum)</span></button>
             </div>
             <div id="config">
                 <p># of digits:</p>
@@ -238,6 +241,7 @@
         let SolutionTask = document.getElementById('Solution-task')
         let isVoiceModeActive = false;
         let isBeginnerModeActive = false;
+        let wasSolved = false;
         let funnySmilies = ["😋", "😛", "😜", "🤪", "😝", "🤗", "🤭", "🤫", "🤨", "😏", "🤯", "🤠", "🥳", "😎", "🤓", "🧐", "😲", "😳", "🥺", "😱", "😈", "😺", "😸", "😹", "😻", "😼", "😽", "🙀"]
 
         window.addEventListener("keydown", function (e) {
@@ -295,7 +299,7 @@
                 // deactivate voice mode
                 localStorage.setItem('isVoiceModeActive', false)
                 currentSolution.removeAttribute("readonly")
-                voiceMode.innerText = "(V)oice is OFF"
+                voiceMode.innerHTML = "(V)oice is OFF<br/><span style='font-size: x-small'>(beta)</span>"
                 isVoiceModeActive = false
                 micImage.classList.add("hidden")
                 return
@@ -303,7 +307,7 @@
             // activate voice mode
             localStorage.setItem('isVoiceModeActive', true)
             micImage.classList.remove("hidden")
-            voiceMode.innerText = "(V)oice is ON"
+            voiceMode.innerHTML = "(V)oice is ON<br/><span style='font-size: x-small'>(beta)</span>"
             currentSolution.setAttribute("readonly", "readonly")
             isVoiceModeActive = true
         }
@@ -351,9 +355,10 @@
         // let recognition;
 
         function validateResult() {
-            currentSolution.disabled = true;
+            //currentSolution.disabled = true;
             solution = currentSolution.value
             endTime = performance.now();
+            wasSolved = true;
 
             updateViewSolution()
         }
@@ -412,6 +417,7 @@
             localStorage.setItem('f2', f2x)
 
             isBeginnerModeActive = (f1x == 1 && f2x == 1);
+            wasSolved = false;
 
             calculateTask(f1x, f2x)
             updateView()
@@ -511,7 +517,7 @@
             hideNav();
             if (currentSolution.value == "") {
                 if (!isVoiceModeActive) {
-                    if (currentSolution.placeholder == "=") {
+                    if (currentSolution.placeholder == "=" || currentSolution.placeholder.includes("%")) {
                         currentSolution.placeholder = getRandomElement(funnySmilies);
                     } else {
                         currentSolution.placeholder = getRandomElement(funnySmilies);
@@ -545,7 +551,7 @@
             hideNav();
             if (currentSolution.value == "") {
                 if (!isVoiceModeActive) {
-                    if (currentSolution.placeholder == "=") {
+                    if (currentSolution.placeholder == "=" || currentSolution.placeholder.includes("%") || currentSolution.placeholder.includes("sec")) {
                         currentSolution.placeholder = getRandomElement(funnySmilies);
                     } else {
                         currentSolution.placeholder = currentSolution.placeholder + getRandomElement(funnySmilies);
@@ -575,6 +581,10 @@
         }
 
         function saveTempSolution() {
+            if(wasSolved){
+                newTask();
+                return;
+            }
             if (isBeginnerModeActive) {
                 saveTempSolutionBeginner();
             } else {
@@ -632,7 +642,7 @@
                     if (j == 1) {
                         return ["1*" + factor1.toString()]
                     }
-                    return [j.toString() + "*" + factor1.toString()  + "=" + keys.join("+")]
+                    return [j.toString() + "*" + factor1.toString() + "=" + keys.join("+")]
                 }
             }
             return []
